font change to 'Comic Sans MS', cursive, sans-serif

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom fonts for this template -->
-  <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet"> -->
+  <!-- <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet"> -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
@@ -69,7 +69,7 @@
         <div class="subheading mb-5">Houston, TX · (832) 656-4249 ·
           <a href="mailto:sdarby713@gmail.com">sdarby713@gmail.com</a>
         </div>
-        <p class="lead mb-5">Add a personal catch.</p>
+        <p class="lead mb-5">Add a personal catch phrase here.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/steve-darby-4419b99/">
             <i class="fab fa-linkedin-in"></i>
