--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Resume - Steven J Darby</title>
+  <title>Portfolio - Steven J Darby</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom fonts for this template -->
-  <!-- <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet"> -->
-  <!-- <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/resume.min.css" rel="stylesheet">
+  <link href="css/resume.css" rel="stylesheet">
 
 </head>
 
@@ -27,7 +27,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">Steve J Darby</span>
+      <span class="d-block d-lg-none">Steve Darby</span>
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
       </span>
@@ -50,10 +50,10 @@
           <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
+          <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
+          <a class="nav-link js-scroll-trigger" href="#certifications">Certifications</a>
         </li>
       </ul>
     </div>
@@ -67,21 +67,14 @@
           <span class="text-primary">Darby</span>
         </h1>
         <div class="subheading mb-5">Houston, TX · (832) 656-4249 ·
-          <a href="mailto:sdarby713@gmail.com">sdarby713@gmail.com</a>
-        </div>
-        <p class="lead mb-5">Add a personal catch phrase here.</p>
+          <a href="mailto:sdarby713@gmail.com">sdarby713@gmail.com</a>        </div>
+        <p class="lead mb-5">Data/Database Analyst and IT Professional with proven capabilities over a broad landscape</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/steve-darby-4419b99/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="#">
+          <a href="https://github.com/sdarby713">
             <i class="fab fa-github"></i>
-          </a>
-          <a href="#">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a href="#">
-            <i class="fab fa-facebook-f"></i>
           </a>
         </div>
       </div>
@@ -95,34 +88,55 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">[ENTER PROFESSIONAL TITLE HERE]</h3>
-            <div class="subheading mb-3">[ENTER COMPANY HERE]</div>
-            <p>[ENTER ACCOMPLISHMENTS HERE]</p>
+            <h3 class="mb-0">DBA - Oracle and SQL Server</h3>
+            <div class="subheading mb-3">Loomis, Houston, Tx</div>
+            <p>●	Reviewed and Performed migrations of application programs, patches, and environment changes to database production environment.</p>
+            <p>●	Performed Oracle data refreshes of production databases to test and development.</p>
+            <p>●	Monitored database for blocking locks and resource usage, catching problems before they became noticeable to outside users.</p>
+            <p>●	Effectively tracked database usage and growth for prevention of space issues and planning for future growth, presenting these in graphic form for management as required.</p>
+            <p>●	Created a sql script for moving aged records from a main table to an archive table.</p>
+            <p>●	Researched and designed an adaptation of workshifts to add efficiency and automation to the resetting of concurrent processor levels during month-end processing.</p>
+            <p>●	Used RMAN to create a backup procedure for a secondary database, at a time when the main EBS backup system still employed a method of mirroring and copy the mirror.</p>
+            <p>●	Employed crontab and scripting to automate cleanup and other routine tasks.</p>
+            <p>●	Maintained Vertex software add-on to EBS.</p>
+            <p>●	Documented database group processes.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">[ENTER LENGTH OF EMPLOYMENT]</span>
+            <span class="text-primary">November 2006 - July 2018</span>
+          </div>
+        </div>
+
+        <h3>Additional Background Experience</h3>
+        <br>
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Storage Administrator</h3>
+            <div class="subheading mb-3">Browning-Ferris Industries, Houston, Tx</div>
+            <p>Tracked and reported disk and tape storage in a mainframe and unix environment.</p>
+            <p>Managed disk storage pools using SMS (Storage Management Subsystem)</p>
+          </div>
+        </div>
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Programmer/Analyst</h3>
+            <div class="subheading mb-3">Browning-Ferris Industries, Houston, Tx</div>
+            <p>Contributed to the development and maintenance of BFI's Commercial Management System.</p>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">[ENTER PROFESSIONAL TITLE HERE]</h3>
-            <div class="subheading mb-3">[ENTER COMPANY HERE]</div>
-            <p>[ENTER ACCOMPLISHMENTS HERE]</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">[ENTER LENGTH OF EMPLOYMENT]</span>
+            <h3 class="mb-0">Programmer/Analyst</h3>
+            <div class="subheading mb-3">Riviana Foods</div>
+            <p>Contributed to the development and maintenance of Riviana's Rough Rice and Clean Rice Systems</p>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">[ENTER PROFESSIONAL TITLE HERE]</h3>
-            <div class="subheading mb-3">[ENTER COMPANY HERE]</div>
-            <p>[ENTER ACCOMPLISHMENTS HERE]</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">[ENTER LENGTH OF EMPLOYMENT]</span>
+            <h3 class="mb-0">Programmer</h3>
+            <div class="subheading mb-3">Hughes Tool Company</div>
+            <p>Contributed to the Deveopment and Maintenance of HTC's Financial Systems, such as AP, AR, and Savings Plan (401k)</p>
           </div>
         </div>
 
@@ -149,9 +163,9 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">[ENTER COLLEGE]</h3>
-            <div class="subheading mb-3">[ENTER DEGREE]</div>
-            <div>[ENTER DESCRIPTION]</div>
+            <h3 class="mb-0">Rice University, Houston, Tx</h3>
+            <div class="subheading mb-3">Data Analytics and Visualization Certificate</div>
+            <div> A 24-week intensive program focused on gaining technical programming skills in Excel, VBA, Python, JavaScript, SQL Databases, Tableau, Big Data, and Machine Learning</div>
             <!-- <p>GPA: 3.23</p> -->
           </div>
           <div class="resume-date text-md-right">
@@ -161,9 +175,8 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">[ENTER COLLEGE]</h3>
-            <div class="subheading mb-3">[ENTER DEGREE]</div>
-            <div>[ENTER DESCRIPTION]</div>
+            <h3 class="mb-0">Southern Methodist University School of Engineering and Applied Sciences, Houston, TX</h3>
+            <div>A 9-month program for gaining knowledge of Sun Solaris and Oracle Database Administration, leading to certifications.</div>
             <!-- <p>GPA: 3.23</p> -->
           </div>
           <div class="resume-date text-md-right">
@@ -172,9 +185,9 @@
         </div>
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">[ENTER COLLEGE]</h3>
-            <div class="subheading mb-3">[ENTER DEGREE]</div>
-            <div>[ENTER DESCRIPTION]</div>
+            <h3 class="mb-0">Rice University, Houston, Tx</h3>
+            <div class="subheading mb-3">Bachelor of Arts</div>
+            <div>Math Sciences (with computer science focus), Managerial Studies, and Economics</div>
             <!-- <p>GPA: 3.23</p> -->
           </div>
           <div class="resume-date text-md-right">
@@ -191,7 +204,19 @@
       <div class="w-100">
         <h2 class="mb-5">Skills</h2>
 
-        <div class="subheading mb-3">Programming Languages &amp; Tools</div>
+        <div class="subheading mb-3">Operating Environments</div>
+        <div>Solaris, Linux, Windows</div><br>
+        <div class="subheading mb-3">Programming Languages</div>
+        <div>Python, Unix Shell Scripting, SQL, PL/SQL</div>
+        <div>HTML, Javascript</div><br>
+        <div class="subheading mb-3">Applications/Tools</div>
+        <div>SQL*Plus, OEM, Toad, Oracle EBS</div>
+        <div>Excel; Git; Tableau, Web Scraping using Beautiful Soup</div><br>
+        <div class="subheading mb-3">Database</div>
+        <div>Oracle, SQL Server, MySQL</div><br>
+
+
+        <!-- <div class="subheading mb-3">Programming Languages &amp; Tools</div>
         <ul class="list-inline dev-icons">
           <li class="list-inline-item">
             <i class="fab fa-html5"></i>
@@ -245,53 +270,51 @@
           <li>
             <i class="fa-li fa fa-check"></i>
             Agile Development &amp; Scrum</li>
-        </ul>
+        </ul>  -->
+
+
       </div>
     </section>
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="projects">
       <div class="w-100">
-        <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+        <h2 class="mb-5">Projects</h2>
+        <h3>A flexible visualizer of Summer Olympic Medals Won</h3>
+        <p>●	Selection criteria available to build display includes a year range, sport, nations, type of event (men’s / women’s / mixed), and medal color.</p>
+        <p>●	Also displays a map locating the Olympic Host Cities and indicating number of nations and athletes participating</p>
+        <p>●	Utilizes Python, Pandas, HTML, Javascript, Leaflet, SQLite</p>
+        <div>●  GitHub: <a href="https://github.com/sdarby713/Olympic_History_Revisited">https://github.com/sdarby713/Olympic_History_Revisited</a></div><br>
+        <div>●  URL: <a href="https://sdarby713-olympic-medals.herokuapp.com/">https://sdarby713-olympic-medals.herokuapp.com/</a></div>
+        <br><br><br>
+
+        <h3>Analysis of the New York City Citibike System</h3>
+        <p>●	Data source: https://www.citibikenyc.com/system-data.</p>
+        <p>●	Data pre-processed using Python</p>
+        <p>●	Utilizes Python, Pandas, HTML, Javascript, Leaflet, SQLite</p>
+        <div>●  GitHub: <a href="https://github.com/sdarby713/citibike_system">https://github.com/sdarby713/citibike_system</a></div><br>
+        <div>●  URL: <a href="https://public.tableau.com/profile/steve.darby#!/vizhome/citibikesystem/Story1">https://public.tableau.com/profile/steve.darby#!/vizhome/citibikesystem/Story1</a></div>
+        <br><br><br>
+
+        <h3>Earthquake Visualizer</h3>
+        <p>●	Plots the locations of earthquakes from the last seven days, sized by magnitude, as reported by USGS. </p>
+        <p>●	Multiple layers allow selection by magnitude range.</p>
+        <p>●	Utilizes HTML, Javascript, Leaflet</p>
+        <div>●  GitHub: <a href="https://github.com/sdarby713/Earthquakes">https://github.com/sdarby713/Earthquakes</a></div><br>
+        <div>●  URL: <a href="https://sdarby713.github.io/Earthquakes">https://sdarby713.github.io/Earthquakes</a></div>
+        <br><br><br>
+    
       </div>
     </section>
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="certifications">
       <div class="w-100">
-        <h2 class="mb-5">Awards &amp; Certifications</h2>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            Google Analytics Certified Developer</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            Mobile Web Specialist - Google Certification</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            2<sup>nd</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - James Buchanan High School - Hackathon 2006</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            3<sup>rd</sup>
-            Place - James Buchanan High School - Hackathon 2005</li>
-        </ul>
+        <h2 class="mb-5">Certifications</h2>
+        <h4>Oracle 9i Certified Associate</h4>
+        <h4>Solaris 8</h4>
       </div>
     </section>
 
