--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Storage Administrator</h3>
             <div class="subheading mb-3">Browning-Ferris Industries, Houston, Tx</div>
-            <p>Tracked and reported disk and tape storage in a mainframe and unix environment.</p>
+            <p>Tracked and reported disk and tape storage in a Mainframe and Unix environment.</p>
             <p>Managed disk storage pools using SMS (Storage Management Subsystem)</p>
           </div>
         </div>
