Added Machine Learning project

--- a/index.html
+++ b/index.html
@@ -305,6 +305,12 @@
         <div>●  URL: <a href="https://sdarby713.github.io/Earthquakes">https://sdarby713.github.io/Earthquakes</a></div>
         <br><br><br>
     
+        <h3>Baseball Hall-Of-Fame Predictions</h3>
+        <p>●	Taking input from previous players statistics, from both inside and outside the Hall Of Fame, uses Logical Regression to predict what current and recent players might be selected.  </p>
+        <p>●	Utilizes Python, Sklearn, Excel</p>
+        <div>●  GitHub: <a href="https://github.com/sdarby713/BB_HallOfFame_Predictions">https://github.com/sdarby713/BB_HallOfFame_Predictions</a></div><br>
+        <br><br><br>
+    
       </div>
     </section>
 
