Added Screenprints of Projects

--- a/index.html
+++ b/index.html
@@ -287,14 +287,18 @@
         <p>●	Utilizes Python, Pandas, HTML, Javascript, Leaflet, SQLite</p>
         <div>●  GitHub: <a href="https://github.com/sdarby713/Olympic_History_Revisited">https://github.com/sdarby713/Olympic_History_Revisited</a></div><br>
         <div>●  URL: <a href="https://sdarby713-olympic-medals.herokuapp.com/">https://sdarby713-olympic-medals.herokuapp.com/</a></div>
+        <br>
+        <img src="img/Olympic.PNG" alt="Olympic Medals Visualizer" style="width:940px;height:700px">
         <br><br><br>
 
         <h3>Analysis of the New York City Citibike System</h3>
         <p>●	Data source: https://www.citibikenyc.com/system-data.</p>
         <p>●	Data pre-processed using Python</p>
-        <p>●	Utilizes Python, Pandas, HTML, Javascript, Leaflet, SQLite</p>
+        <p>●	Utilizes Tableau</p>
         <div>●  GitHub: <a href="https://github.com/sdarby713/citibike_system">https://github.com/sdarby713/citibike_system</a></div><br>
         <div>●  URL: <a href="https://public.tableau.com/profile/steve.darby#!/vizhome/citibikesystem/Story1">https://public.tableau.com/profile/steve.darby#!/vizhome/citibikesystem/Story1</a></div>
+        <br>
+        <img src="img/Citibike.PNG" alt="Citibike Analysis Tableau" style="width:900px;height:590px">
         <br><br><br>
 
         <h3>Earthquake Visualizer</h3>
@@ -303,6 +307,8 @@
         <p>●	Utilizes HTML, Javascript, Leaflet</p>
         <div>●  GitHub: <a href="https://github.com/sdarby713/Earthquakes">https://github.com/sdarby713/Earthquakes</a></div><br>
         <div>●  URL: <a href="https://sdarby713.github.io/Earthquakes">https://sdarby713.github.io/Earthquakes</a></div>
+        <br>
+        <img src="img/Earthquake.PNG" alt="Earthquake Visualizer" style="width:900px;height:366px">  
         <br><br><br>
     
         <h3>Baseball Hall-Of-Fame Predictions</h3>
