Added Project 4 screen print

--- a/index.html
+++ b/index.html
@@ -315,6 +315,8 @@
         <p>●	Taking input from previous players statistics, from both inside and outside the Hall Of Fame, uses Logical Regression to predict what current and recent players might be selected.  </p>
         <p>●	Utilizes Python, Sklearn, Excel</p>
         <div>●  GitHub: <a href="https://github.com/sdarby713/BB_HallOfFame_Predictions">https://github.com/sdarby713/BB_HallOfFame_Predictions</a></div><br>
+        <br>
+        <img src="img/HOF_Batters.PNG" alt="Batters Predicted for HOF" style="width:900px;height:470px">  
         <br><br><br>
     
       </div>
