--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
         <p>●	Selection criteria available to build display includes a year range, sport, nations, type of event (men’s / women’s / mixed), and medal color.</p>
         <p>●	Also displays a map locating the Olympic Host Cities and indicating number of nations and athletes participating</p>
         <p>●	Utilizes Python, Pandas, HTML, Javascript, Leaflet, SQLite</p>
-        <div>●  GitHub: <a href="https://github.com/sdarby713/Olympic_History_Revisited">https://github.com/sdarby713/Olympic_History_Revisited</a></div><br>
+        <div>●  GitHub: <a href="https://github.com/sdarby713/Olympic_History_Revisited">https://github.com/sdarby713/Olympic_History_Revisited</a></div>
         <div>●  URL: <a href="https://sdarby713-olympic-medals.herokuapp.com/">https://sdarby713-olympic-medals.herokuapp.com/</a></div>
         <br>
         <img src="img/Olympic.PNG" alt="Olympic Medals Visualizer" style="width:940px;height:700px">
@@ -295,7 +295,7 @@
         <p>●	Data source: https://www.citibikenyc.com/system-data.</p>
         <p>●	Data pre-processed using Python</p>
         <p>●	Utilizes Tableau</p>
-        <div>●  GitHub: <a href="https://github.com/sdarby713/citibike_system">https://github.com/sdarby713/citibike_system</a></div><br>
+        <div>●  GitHub: <a href="https://github.com/sdarby713/citibike_system">https://github.com/sdarby713/citibike_system</a></div>
         <div>●  URL: <a href="https://public.tableau.com/profile/steve.darby#!/vizhome/citibikesystem/Story1">https://public.tableau.com/profile/steve.darby#!/vizhome/citibikesystem/Story1</a></div>
         <br>
         <img src="img/Citibike.PNG" alt="Citibike Analysis Tableau" style="width:900px;height:590px">
@@ -305,7 +305,7 @@
         <p>●	Plots the locations of earthquakes from the last seven days, sized by magnitude, as reported by USGS. </p>
         <p>●	Multiple layers allow selection by magnitude range.</p>
         <p>●	Utilizes HTML, Javascript, Leaflet</p>
-        <div>●  GitHub: <a href="https://github.com/sdarby713/Earthquakes">https://github.com/sdarby713/Earthquakes</a></div><br>
+        <div>●  GitHub: <a href="https://github.com/sdarby713/Earthquakes">https://github.com/sdarby713/Earthquakes</a></div>
         <div>●  URL: <a href="https://sdarby713.github.io/Earthquakes">https://sdarby713.github.io/Earthquakes</a></div>
         <br>
         <img src="img/Earthquake.PNG" alt="Earthquake Visualizer" style="width:900px;height:366px">  
