Allow click-through on screen prints to project pages

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
         <div>●  GitHub: <a href="https://github.com/sdarby713/Olympic_History_Revisited">https://github.com/sdarby713/Olympic_History_Revisited</a></div>
         <div>●  URL: <a href="https://sdarby713-olympic-medals.herokuapp.com/">https://sdarby713-olympic-medals.herokuapp.com/</a></div>
         <br>
-        <img src="img/Olympic.PNG" alt="Olympic Medals Visualizer" style="width:940px;height:700px">
+        <a href="https://sdarby713-olympic-medals.herokuapp.com/"> <img src="img/Olympic.PNG" alt="Olympic Medals Visualizer" style="width:940px;height:700px"></a>
         <br><br><br>
 
         <h3>Analysis of the New York City Citibike System</h3>
@@ -298,7 +298,7 @@
         <div>●  GitHub: <a href="https://github.com/sdarby713/citibike_system">https://github.com/sdarby713/citibike_system</a></div>
         <div>●  URL: <a href="https://public.tableau.com/profile/steve.darby#!/vizhome/citibikesystem/Story1">https://public.tableau.com/profile/steve.darby#!/vizhome/citibikesystem/Story1</a></div>
         <br>
-        <img src="img/Citibike.PNG" alt="Citibike Analysis Tableau" style="width:900px;height:590px">
+        <a href="https://public.tableau.com/profile/steve.darby#!/vizhome/citibikesystem/Story1"><img src="img/Citibike.PNG" alt="Citibike Analysis Tableau" style="width:900px;height:590px"></a>
         <br><br><br>
 
         <h3>Earthquake Visualizer</h3>
@@ -308,7 +308,7 @@
         <div>●  GitHub: <a href="https://github.com/sdarby713/Earthquakes">https://github.com/sdarby713/Earthquakes</a></div>
         <div>●  URL: <a href="https://sdarby713.github.io/Earthquakes">https://sdarby713.github.io/Earthquakes</a></div>
         <br>
-        <img src="img/Earthquake.PNG" alt="Earthquake Visualizer" style="width:900px;height:366px">  
+        <a href="https://sdarby713.github.io/Earthquakes"><img src="img/Earthquake.PNG" alt="Earthquake Visualizer" style="width:900px;height:366px"></a>
         <br><br><br>
     
         <h3>Baseball Hall-Of-Fame Predictions</h3>
