update package-lock versions

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Programmer</h3>
             <div class="subheading mb-3">Hughes Tool Company</div>
-            <p>Contributed to the Deveopment and Maintenance of HTC's Financial Systems, such as AP, AR, and Savings Plan (401k)</p>
+            <p>Contributed to the development and maintenance of HTC's Financial Systems, such as AP, AR, and Savings Plan (401k)</p>
           </div>
         </div>
 
